--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.13,<4.0"
 dependencies = [
   "mojentic",
   "fastapi>=0.110",
+  "argon2-cffi>=23.1.0",
   "uvicorn[standard]>=0.27",
+  "python-multipart>=0.0.7",
   "docling",
 ]
 
